--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,13 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        django: ["2.2", "3.0", "3.1"]
-        python-version: ["3.6", "3.7", "3.8"]
+        django: ["2.2", "3.0", "3.1", "3.2"]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
