--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38}-django{22,30,31,master},
+    py{36,37,38,39}-django{22,30,31,32,main},
     black,flake8
 
 [gh-actions]
@@ -8,13 +8,15 @@ python =
     3.6: py36
     3.7: py37
     3.8: py38
+    3.9: py39
 
 [gh-actions:env]
 DJANGO =
     2.2: django22
     3.0: django30
     3.1: django31
-    master: djangomaster
+    3.2: django32
+    main: djangomain
 
 [testenv]
 passenv = *
@@ -24,24 +26,23 @@ setenv =
 deps =
     -e.[test]
     psycopg2-binary
-    django111: Django>=1.11,<2.0
-    django111: djangorestframework<3.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
     django30: Django>=3.0a1,<3.1
     django31: Django>=3.1,<3.2
-    djangomaster: https://github.com/django/django/archive/master.zip
+    django32: Django>=3.2a1,<3.3
+    djangomain: https://github.com/django/django/archive/main.zip
 commands = {posargs:py.test --cov=graphene_django graphene_django examples}
 
 [testenv:black]
-basepython = python3.8
+basepython = python3.9
 deps = -e.[dev]
 commands  =
     black --exclude "/migrations/" graphene_django examples setup.py --check
 
 [testenv:flake8]
-basepython = python3.8
+basepython = python3.9
 deps = -e.[dev]
 commands =
     flake8 graphene_django examples setup.py
