Django v4, python 3.10 support for graphene-django v3 (#1281)
Co-authored-by: Yair Silbermintz <MisterGlass@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
-    py{36,37,38,39}-django{22,30,31,32,main},
+    py{36,37,38,39}-django{22,30,31},
+    py{36,37,38,39,310}-django32,
+    py{38,39,310}-django{40,main},
     black,flake8
 
 [gh-actions]
@@ -9,6 +11,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
 
 [gh-actions:env]
 DJANGO =
@@ -16,6 +19,7 @@ DJANGO =
     3.0: django30
     3.1: django31
     3.2: django32
+    4.0: django40
     main: djangomain
 
 [testenv]
@@ -26,12 +30,11 @@ setenv =
 deps =
     -e.[test]
     psycopg2-binary
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
-    django30: Django>=3.0a1,<3.1
+    django30: Django>=3.0,<3.1
     django31: Django>=3.1,<3.2
-    django32: Django>=3.2a1,<3.3
+    django32: Django>=3.2,<4.0
+    django40: Django>=4.0,<4.1
     djangomain: https://github.com/django/django/archive/main.zip
 commands = {posargs:py.test --cov=graphene_django graphene_django examples}
 
